Cross-browser focus styles - fixed on ie11 and firefox
Turns out focus styles in ie11 and firefox behave differently than on chrome, so some new styles have been applied to account for this

Sources:
- https://stackoverflow.com/questions/1599660/which-html-elements-can-receive-focus

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -2,8 +2,17 @@
   box-sizing: border-box;
 }
 
-*:focus {
-  @include focus();
+a[href],
+area[href],
+input,
+select
+textarea,
+button,
+iframe,
+[tabindex],
+[contentEditable=true]
+{
+  &:not([disabled]):focus { @include focus(); }
 }
 
 body {
